@@ -1594,7 +1594,7 @@ command to generate the output files.
     </magic>
   </mime-type>
   <mime-type type="application/x-perl">
-    <sub-class-of type='application/x-executable'/>
+    <sub-class-of type="application/x-executable"/>
     <sub-class-of type="text/plain"/>
     <_comment>Perl script</_comment>
     <magic priority="50">
@@ -1704,8 +1704,8 @@ command to generate the output files.
     <glob pattern="*.rb"/>
   </mime-type>
   <mime-type type="application/x-markaby">
-    <sub-class-of type="application/x-ruby">
-    <_comment>Markaby script<_comment>
+    <sub-class-of type="application/x-ruby"/>
+    <_comment>Markaby script</_comment>
     <glob patterm="*.mab"/>
   </mime-type>
   <mime-type type="application/x-sc">
@@ -2904,6 +2904,13 @@ command to generate the output files.
     <acronym>WML</acronym>
     <expanded-acronym>Wireless Markup Language</expanded-acronym>
     <glob pattern="*.wml"/>
+  </mime-type>
+  <mime-type type="application/x-ace">
+    <_comment>ACE archive</_comment>
+    <magic priority="50">
+      <match type="string" value="**ACE**" offset="7"/>
+    </magic>
+    <glob pattern="*.ace"/>
   </mime-type>
   <mime-type type="text/x-adasrc">
     <sub-class-of type="text/plain"/>
