@@ -1,5 +1,11 @@
 2007-02-05  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add mime-type including magic for ACE
+	archives (Patch from Pino Toscano <toscano.pino@tiscali.it>)
+	(Closes: #6473), Fix parsing from previous commit
+
+2007-02-05  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add application/x-markaby mime-type for
 	"Ruby markup"-fu (Closes: #6132)
 
